<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/type"
        android:title="@string/type">
        <menu>
            <group android:checkableBehavior="all">
                <item android:id="@+id/city_park"
                    android:title="@string/city_park">
                </item>
                <item android:id="@+id/golf_course"
                    android:title="@string/golf"
                    android:checkable="true">
                </item>
                <item android:id="@+id/national_park"
                    android:title="@string/national_park"
                    android:checkable="true">
                </item>
                <item android:id="@+id/open_water"
                    android:title="@string/open_water"
                    android:checkable="true">
                </item>
                <item android:id="@+id/beach"
                    android:title="@string/beach"
                    android:checkable="true">
                </item>
                <item android:id="@+id/campground"
                    android:title="@string/campground"
                    android:checkable="true">
                </item>
                <item android:id="@+id/pool"
                    android:title="@string/pool"
                    android:checkable="true">
                </item>
                <item android:id="@+id/garden"
                    android:title="@string/garden"
                    android:checkable="true">
                </item>
                <item android:id="@+id/dog_park"
                    android:title="@string/dog_park"
                    android:checkable="true">
                </item>
            </group>
        </menu>
    </item>

</menu>