<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_exitFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView_clearFilters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/clear"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/only_saved"
                app:chipBackgroundColor="@color/faded_medium_green"/>

            <TextView
                android:id="@+id/textView_featuresTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/filter_features"
                android:textColor="@color/medium_green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexBox_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="row"
                app:flexWrap="wrap" />

            <TextView
                android:id="@+id/textView_sports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sports"
                android:textColor="@color/medium_green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexBox_sports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexDirection="row"
                app:flexWrap="wrap" />

            <TextView
                android:id="@+id/textView_ratingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textColor="@color/medium_green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX="0.75"
                android:scaleY="0.75" />

            <TextView
                android:id="@+id/textView_typeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/medium_green"
                android:textSize="14sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/linearLayout_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox_golf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/golf" />

                <CheckBox
                    android:id="@+id/checkBox_cityPark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_park" />

                <CheckBox
                    android:id="@+id/checkBox_nationalPark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/national_park" />

                <CheckBox
                    android:id="@+id/checkBox_water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_water" />

                <CheckBox
                    android:id="@+id/checkBox_beach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beach" />

                <CheckBox
                    android:id="@+id/checkBox_campground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campground" />

                <CheckBox
                    android:id="@+id/checkBox_pool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pool" />

                <CheckBox
                    android:id="@+id/checkBox_garden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garden" />

                <CheckBox
                    android:id="@+id/checkBox_dogPark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dog_park" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_applyFilters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/apply_filters"
                android:textAlignment="center" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>